--- a/opdracht 5 - spa/index.html
+++ b/opdracht 5 - spa/index.html
@@ -55,6 +55,14 @@
 					<p>It is conforming in HTML5 for links to include block level elements such as headings and paragraphs, this was forbidden in previous versions of HTML. A recent article by @feather concludes that the inclusion of block level elements inside a link causes some Assistive Technology (AT) to misbehave.</p>
 				</div>
 			</article>
+			<h2>Artikel_1</h2>		
+			<article>
+				<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=469&h=279" alt="A colorful crayon drawing on the hood of a car." />
+				<div class="article_inner">
+					<h1><a href="/">HTML5 accessibility, are block links hurting accessibility?</a></h1>
+					<p>It is conforming in HTML5 for links to include block level elements such as headings and paragraphs, this was forbidden in previous versions of HTML. A recent article by @feather concludes that the inclusion of block level elements inside a link causes some Assistive Technology (AT) to misbehave.</p>
+				</div>
+			</article>
 		</section>
 
 		<section id="artikel_2" class="hidden">
@@ -66,9 +74,25 @@
 					<p>It is conforming in HTML5 for links to include block level elements such as headings and paragraphs, this was forbidden in previous versions of HTML. A recent article by @feather concludes that the inclusion of block level elements inside a link causes some Assistive Technology (AT) to misbehave.</p>
 				</div>
 			</article>
+			<h2>Artikel_2</h2>		
+			<article>
+				<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=469&h=279" alt="A colorful crayon drawing on the hood of a car." />
+				<div class="article_inner">
+					<h1><a href="/">HTML5 accessibility, are block links hurting accessibility?</a></h1>
+					<p>It is conforming in HTML5 for links to include block level elements such as headings and paragraphs, this was forbidden in previous versions of HTML. A recent article by @feather concludes that the inclusion of block level elements inside a link causes some Assistive Technology (AT) to misbehave.</p>
+				</div>
+			</article>
 		</section>
 
 		<section id="artikel_3" class="hidden">
+			<h2>Artikel_3</h2>		
+			<article>
+				<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=469&h=279" alt="A colorful crayon drawing on the hood of a car." />
+				<div class="article_inner">
+					<h1><a href="/">HTML5 accessibility, are block links hurting accessibility?</a></h1>
+					<p>It is conforming in HTML5 for links to include block level elements such as headings and paragraphs, this was forbidden in previous versions of HTML. A recent article by @feather concludes that the inclusion of block level elements inside a link causes some Assistive Technology (AT) to misbehave.</p>
+				</div>
+			</article>
 			<h2>Artikel_3</h2>		
 			<article>
 				<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=469&h=279" alt="A colorful crayon drawing on the hood of a car." />
