--- a/week 2/opdracht 1/index.html
+++ b/week 2/opdracht 1/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 
+<button class="autoplay hidden"><span class="auto_stop hidden">&#x025FC;</span><span class="auto_play hidden">&#9658;</span>AUTOPLAY</button>
+
 <!-- NAVIGATION -->
 
 <div class="nav_wrapper">
