scrollfix + sroll and filter

--- a/week 2/opdracht 1/index.html
+++ b/week 2/opdracht 1/index.html
@@ -56,6 +56,12 @@
             <label for="liveSearch"></label>
             <input type="text" class="liveSearch" name="liveSearch" id="liveSearch" placeholder="Search on anything..">
             <button class="delSearch hidden">&times;</button>
+            <select id="sorting" class="sorting">
+                <option value="email">email</option>
+                <option value="name">name</option>
+                <option value="reverse">reverse</option>
+                <option value="color">color</option>
+            </select>
             <button id="checkSafe" class="checkSafe">Are we safe?</button>
             <button id="refresh" class="refresh">Refresh</button>
             <button id="newtoken" class="newtoken">Change token</button>
